# label-fusion

./: .gitignore  build.sh
include/: mask_fusion_nodelet.h
ros/: CMakeLists.txt  package.xml
ros/include/: utils.hpp
ros/include/label_fusion_ros/: mask_fusion_nodelet.h
ros/plugins/nodelet/: liblabel_fusion.xml  liblabel_fusion_ros.xml
ros/src/: mask_fusion_nodelet.cpp
src/: mask_fusion_nodelet.cpp
