<?xml version="1.0"?>
<package>
  <name>label_fusion_ros</name>
  <version>0.0.0</version>
  <description>The label_fusion_ros package</description>

  <maintainer email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/label_fusion_ros</url> -->

  <author email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/liblabel_fusion_ros.xml"/>
  </export>
</package>
